@@ -1,6 +1,6 @@
 Package: mi
-Version: 0.08-04.04
-Date: 2009-12-1
+Version: 0.08-04.06
+Date: 2009-12-8
 Title: Missing Data Imputation and Model Checking
 Author: Andrew Gelman <gelman@stat.columbia.edu>, Jennifer Hill
         <jh1030@columbia.edu>, Masanao Yajima <my2167@columbia.edu>,
@@ -11,6 +11,6 @@ Depends: methods, MASS, nnet, car, arm, lme4, R2WinBUGS, abind
 Description: Missing-data imputation and model checking
 URL: http://www.stat.columbia.edu/~gelman/
 License: GPL (>= 2)
-Packaged: 2009-12-02 18:09:58 UTC; yusung
+Packaged: 2009-12-08 19:58:29 UTC; yusung
 Repository: CRAN
-Date/Publication: 2009-12-03 11:43:51
+Date/Publication: 2009-12-09 08:53:54
